--- a/gooogle-homepage.html
+++ b/gooogle-homepage.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <title>Google</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/reset.css">
         <link rel="stylesheet" href="styles/main.css">
         <style>
@@ -11,7 +13,41 @@
         </style>
     </head>
     <body>
-        <h1>hello world</h1>
+        <nav>
+            <ul>
+                <li><a href="https://www.google.com/gmail/about/#">Gmail</a></li>
+                <li><a href="https://www.google.com.eg/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+                <li><a href="https://about.google/intl/en/products/?tab=wh"></a></li>
+                <li><a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com%3Fhl%3Den-US">sign in</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="logo">
+                <img src="images/google-logo.png" alt="google-logo">
+            </div>
+            <form action="" method="GET">
+                <div class="search-input">
+                    <input type="search">
+                </div>
+                <div class="google-button">
+                    <button type="submit">Google search</button>
+                    <button type="submit">I'm feeling lucky</button>
+                </div>
+            </form>
+        </main>
+        <footer>
+            <ul class="left">
+                <li><a href="https://ads.google.com/intl/en_eg/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a></li>
+                <li><a href="https://about.google/?utm_source=google-EG&utm_medium=referral&utm_campaign=hp-footer&fg=1">sAbout</a></li>
+                <li><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a></li>
+            </ul>
+            <ul class="right">
+                <li><a href="https://policies.google.com/privacy?hl=en-EG&fg=1">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?hl=en-EG&fg=1">Terms</a></li>
+                <li><a href="https://www.google.com/preferences?hl=en">Setting</a></li>
+            </ul>
+        </footer>
         <script src="scripts/main.js"></script>
     </body>
 </html>
